--- a/src/components/dice/dice.css
+++ b/src/components/dice/dice.css
@@ -4,6 +4,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .flex-tag {
@@ -13,7 +14,7 @@
 }
 
 .padding8 {
-    padding: 8px;
+    padding: 8px !important;
 }
 
 .large-input[type="number"] {
@@ -22,4 +23,52 @@
 
 .auto-input {
     margin-top: -120px;
+}
+
+.dice-button {
+    position: absolute !important;
+    height: 44px;
+    left: 0;
+    right: 0;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.text-bold {
+    font-weight: bold;
+}
+
+.text-darken-4 {
+    color: #212121;
+}
+
+.font-size16 {
+    font-size: 16px;
+    vertical-align: middle;
+}
+
+.roll {
+    display: inline-block;
+    border-radius: 50%;
+    width: 180px;
+    height: 180px;
+    vertical-align: middle;
+
+}
+
+.roll span {
+    line-height: 1.15;
+    font-size: 10rem;
+}
+
+.pulse-wrapper {
+    width: 20px;
+    height: 20px;
+    line-height: 1.3;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.roll.red.pulse, .pulse-wrapper.red.pulse {
+    background-color: #f443364f !important;
 }
