--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -89,7 +89,7 @@
     border-radius: 4%;
     position: absolute;
     width: 95%;
-    background: #ef5350;
+    background: #d32f2f;
     z-index: 200;
     margin-top: -140px;
     left: 0;
