[Project] querried on characters by userid. adjusted dice styling. added to encounter/master

--- a/src/components/dice/dice.css
+++ b/src/components/dice/dice.css
@@ -25,7 +25,7 @@
     margin-top: -120px;
 }
 
-.dice-button {
+.dice-button-img {
     position: absolute !important;
     height: 44px;
     left: 0;
