--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -180,6 +180,9 @@ li.collection-item.z-depth-2.margin8.grey.darken-3 {
     border-radius: 20px;
 }
 
+.character-encounter {
+    padding: 8px 8px !important;
+}
 .page-header {
     margin: 16px 32px 16px 32px;
     color: #000000b3;
@@ -270,6 +273,7 @@ li.collection-item.z-depth-2.margin8.grey.darken-3 {
     margin-bottom: 0 !important;
     text-align: center !important;
     color: #eee !important;
+    width: 44px !important;
 
 }
 
@@ -282,6 +286,7 @@ li.collection-item.z-depth-2.margin8.grey.darken-3 {
 
 .encounter-input[type=number] {
     -moz-appearance: textfield !important; /* Firefox */
+
 }
 
 .overlay {
@@ -301,19 +306,28 @@ li.collection-item.z-depth-2.margin8.grey.darken-3 {
 }
 
 .char-roll {
-    display: block !important;
-    overflow: visible;
-    font-size: 20px;
-    margin: 4px;
+    height: 33px;
+    min-width: 33px;
     background-color: #841717;
     line-height: 2.5;
     text-align: center;
-    border-radius: 10px;
-    margin-left: 0px;
     font-weight: bold;
+    height: 100%;
+    border-radius: 6px;
 }
 
 .margin8-right {
     margin: 8px 0 8px 8px !important;
     border-radius: 15px;
+}
+
+@media only screen and (max-width: 420px) {
+    .hp {
+        width: 100%;
+    }
+
+    .health-outer {
+        width: 100%
+    }
+
 }
