--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -265,6 +265,7 @@ li.collection-item.z-depth-2.margin8.grey.darken-3 {
 
 .hp {
     width: 30%;
+    color: #e0e0e0;
 }
 
 .health-inner {
@@ -333,9 +334,23 @@ li.collection-item.z-depth-2.margin8.grey.darken-3 {
     border-radius: 15px;
 }
 
+.logo {
+    padding: 8px;
+}
+
+.logo-image {
+    border-radius: 50%;
+    height: 65px;
+    width: 65px;
+    display: inline-block;
+    margin: 4px;
+    border: 4px solid #424242;
+}
+
 @media only screen and (max-width: 420px) {
     .hp {
         width: 100%;
+        color: #e0e0e0;
     }
 
     .health-outer {
